# amazonlinux2-py310-selenium4x-cdk-example

./: README.md  app.py  local_debug.Dockerfile  pyproject.toml
cdk_stacks/: test_stack.py
src/: local_debug.py
src/libs/: selenium.py
